final touch on the project

--- a/responsive_web_design/project1/tribute_page.html
+++ b/responsive_web_design/project1/tribute_page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> -->
   <link rel="stylesheet" href="tribute_page_stylesheet.css">
   <title> Tribute Page </title>
 </head>
@@ -16,13 +16,65 @@
     <div id="img-div" class="portrait-image">
       <figure>
         <figurecap>
-        <img id="image" style="width: 110%"
-          src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fb%2Fb4%2FGeo_Milev.jpg%2F220px-Geo_Milev.jpg&f=1&nofb=1"
+        <img id="image" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fb%2Fb4%2FGeo_Milev.jpg%2F220px-Geo_Milev.jpg&f=1&nofb=1"
           alt="Portrait picture of Geo Milev">
         <figurecap id="portrait-image-figcap"> Geo Milev portrait picture </figurecap>
       </figure>
     </div>
-    <h4 id="main-text"> <p> Geo Milev[a] (born Georgi Milev Kasabov;[b] 15 January [O.S. 27 January] 1895, Radne mahle – 15 May 1925, Sofia), was a Bulgarian poet, journalist, and translator. Geo Milev is perhaps best known for his epic poem Septemvri, written in the aftermath of the Communist-led September Uprising. </p> </h4>
+    <section>
+      <h3 id="headline"> Here's a short autobiography of Geo Milev </h3>
+      <div id="autobiography">
+        <p> Geo Milev (born Georgi Milev Kasabov; 15 January [O.S. 27 January]
+          1895, Radne mahle – 15 May 1925, Sofia), was
+          a Bulgarian poet, journalist, and translator. Geo Milev is perhaps
+          best known for his epic poem Septemvri, written in the aftermath of
+          the Communist-led September Uprising. Which eventually became the cause 
+          for his vicious murder.</p>
+          <h4> Life </h4>
+          <p>
+          Geo Milev was born Georgi Milev Kasabov in Radne mahale, today
+          Radnevo, the first son in the family of school teachers Milyo and
+          Anastasia Kasabovi. In 1897 the family moved to Stara Zagora, where
+          his father started a publishing business in 1907. Geo Milev attended
+          the town's high school from 1907 to 1911 before he went on to study
+          at the Faculty of Philology of Sofia University. From 1912 Geo Milev
+          continued his education at the Faculty of Philosophy of Leipzig
+          University, where he was introduced to German Expressionism. On 30
+          July 1914, two days after the outbreak of the First World War, he
+          traveled from Leipzig to London, where he spent several months
+          sightseeing and improving his English and met the Belgian Symbolist
+          poet Émile Verhaeren. On returning to Germany, Geo Milev was
+          detained in Hamburg on 18 October 1914 on suspicion of being an
+          English spy. He was released after eleven days and returned to
+          Leipzig, where he worked on his university thesis on Richard Dehmel.
+          On 8 August 1915 he returned to Bulgaria without having obtained a
+          degree. Beginning in 1916 he fought in World War I, where he was
+          severely injured and lost his right eye.
+           After recuperating in Berlin he began to collaborate with the
+           magazine Aktion. Upon his return to Bulgaria he started to publish
+          the Bulgarian modernist magazine Везни (Scales), in Sofia. He
+          contributed to the publication as a translator, theatre reviewer,
+          director and editor of anthologies.
+          </p>
+
+          <h4> Death </h4>
+          <p>
+            On May 15, 1925, in the course of government reprisals following the
+            St Nedelya Church assault, Geo Milev, a member of the Bulgarian
+            Communist party, was taken to a police station for a
+            "short interrogation" from which he never returned. His fate
+            remained unknown for 30 years. In 1954 during the trial of General
+            Ivan Valkov and a group of former police and military executioners,
+            one of the defendants confessed how victims of the 1925 purge had
+            been executed and where they were buried. Geo Milev had been
+            strangled with wire and then buried in a mass grave in Ilientsi,
+            near Sofia. His skull was found in the mass grave. His body was
+            identified by the glass eye he was wearing after he lost his right
+            eye in World War I.
+          </p>
+
+      </div>
+    </section>
     <div> <a id="tribute-link" href="https://en.wikipedia.org/wiki/Geo_Milev"> Wikipedia entry </a> </div>
   </body>
 </html>
