initial commit for the second project and some small changes to the first

--- a/responsive_web_design/project1/tribute_page.html
+++ b/responsive_web_design/project1/tribute_page.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> -->
   <link rel="stylesheet" href="tribute_page_stylesheet.css">
   <title> Tribute Page </title>
 </head>
@@ -28,8 +26,8 @@
           1895, Radne mahle – 15 May 1925, Sofia), was
           a Bulgarian poet, journalist, and translator. Geo Milev is perhaps
           best known for his epic poem Septemvri, written in the aftermath of
-          the Communist-led September Uprising. Which eventually became the cause 
-          for his vicious murder.</p>
+          the Communist-led September Uprising. Which eventually became the
+          cause for his vicious murder. </p>
           <h4> Life </h4>
           <p>
           Geo Milev was born Georgi Milev Kasabov in Radne mahale, today
