--- a/responsive_web_design/project2/survey_form.html
+++ b/responsive_web_design/project2/survey_form.html
@@ -2,29 +2,29 @@
 
 <!-- User Story #1: I can see a title with id="title" in H1 sized text. (Done)
 
-User Story #2: I can see a short explanation with id="description" in P sized text.
+User Story #2: I can see a short explanation with id="description" in P sized text. (Done)
 
-User Story #3: I can see a form with id="survey-form".
+User Story #3: I can see a form with id="survey-form". (Done)
 
-User Story #4: Inside the form element, I am required to enter my name in a field with id="name".
+User Story #4: Inside the form element, I am required to enter my name in a field with id="name". (Done)
 
-User Story #5: Inside the form element, I am required to enter an email in a field with id="email".
+User Story #5: Inside the form element, I am required to enter an email in a field with id="email". (Done)
 
-User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error.
+User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. (Done)
 
-User Story #7: Inside the form, I can enter a number in a field with id="number".
+User Story #7: Inside the form, I can enter a number in a field with id="number". (Done)
 
-User Story #8: If I enter non-numbers in the number input, I will see an HTML5 validation error.
+User Story #8: If I enter non-numbers in the number input, I will see an HTML5 validation error. (Done)
 
-User Story #9: If I enter numbers outside the range of the number input, which are defined by the min and max attributes, I will see an HTML5 validation error.
+User Story #9: If I enter numbers outside the range of the number input, which are defined by the min and max attributes, I will see an HTML5 validation error. (Done)
 
-User Story #10: For the name, email, and number input fields inside the form I can see corresponding labels that describe the purpose of each field with the following ids: id="name-label", id="email-label", and id="number-label".
+User Story #10: For the name, email, and number input fields inside the form I can see corresponding labels that describe the purpose of each field with the following ids: id="name-label", id="email-label", and id="number-label". (Done)
 
-User Story #11: For the name, email, and number input fields, I can see placeholder text that gives me a description or instructions for each field.
+User Story #11: For the name, email, and number input fields, I can see placeholder text that gives me a description or instructions for each field. (Done)
 
-User Story #12: Inside the form element, I can select an option from a dropdown that has a corresponding id="dropdown".
+User Story #12: Inside the form element, I can select an option from a dropdown that has a corresponding id="dropdown". (Done)
 
-User Story #13: Inside the form element, I can select a field from one or more groups of radio buttons. Each group should be grouped using the name attribute.
+User Story #13: Inside the form element, I can select a field from one or more groups of radio buttons. Each group should be grouped using the name attribute (Done)
 
 User Story #14: Inside the form element, I can select several fields from a series of checkboxes, each of which must have a value attribute.
 
@@ -43,7 +43,7 @@ User Story #16: Inside the form element, I am presented with a button with id="s
         Survey Form (Free Code Camp Project #2)
       </h1>
       <p id="description">
-        This project tests my abilities to build such forms
+        Survey about self tought programmers and their background in mathematics
       </p>
     </main>
     <div>
@@ -57,7 +57,7 @@ User Story #16: Inside the form element, I am presented with a button with id="s
           name="name"
           id="name"
           class="survey-form"
-          placeholder="Please, enter your name"
+          placeholder="Enter your name"
           required
         />
         </div>
@@ -70,11 +70,151 @@ User Story #16: Inside the form element, I am presented with a button with id="s
             name="email"
             id="email"
             class="survey-form"
-            placeholder="Please, enter your email"
+            placeholder="Enter your email"
             required
           />
+        </div
+        <div class="survey-form">
+          <label id="number-label" for="number">Number of math courses you have taken at
+          university
+          </label>
+          <input
+            type="number"
+            name="number"
+            id="number"
+            class="survey-form"
+            min="0"
+            max="20"
+            placeholder="Number"
+          />
+        </div>
+        <div class="survey-form">
+          <p>
+            Select what best describes your university background.
+          </p>
+          <select id="dropdown" class="survey-form" required>
+            <option disabled selected value > Select an option </option>
+            <option value="math">Mathematics</option>
+            <option value="physics">Physics</option>
+            <option value="engneering">Engineering</option>
+            <option value="chemistry">Chemistry</option>
+          </select>
+        </div>
+        <div class="survey-form">
+          <p>How essential for your softwear engineering skills are the taken
+            mathematics classes at the university?
+          </p>
+          <label>
+            <input
+              name="math-essentiality"
+              value="absolutely-necessary"
+              class="radio-btn"
+              type="radio"
+              checked
+            />
+            Absolutely essential and life saving!
+          </label>
+          <label>
+            <input
+              name="math-essentiality"
+              value="not-so-important"
+              class="radio-btn"
+              type="radio"
+            />
+            Not so important.
+          </label>
+          <label>
+            <input
+              name="math-essentiality"
+              value="time-waste"
+              class="radio-btn"
+              type="radio"
+            />
+            Absolute waste of time.
+          </label>
+        </div>
+        <div class="survey-form">
+          <p>Which part of mathematics was most pleasent and valuable to study?</p>
+          <label>
+            <input
+              name="fav-math"
+              value="math-analysis"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Mathematical Analysis
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="comlex-analysis"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Complex Analysis
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="lin-alg"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Linear Algebra
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="analytical-geometry"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Analytical Geometry
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="dif-eq"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Differential Equations
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="prob-stat"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Probability Theory and Mathematical Statistics
+          </label>
+          <label>
+            <input
+              name="fav-math"
+              value="other"
+              class="checkbox-btn"
+              type="checkbox"
+            />
+            Other
+          </label>
+        </div>
+        <div class="survey-form">
+          <p>Shall you have some more commets, please enter them below.</p>
+          <textarea
+          id="comments"
+          name="input-textarea"
+          class="input-textarea"
+          placeholder="Enter your comments here...">
+          </textarea>
         </div>
       </form>
     </div>
+    <div class="survey-form">
+      <button type="submit" id="submit">
+        Submit
+      </button>
+    </div>
+
   </body>
 </html>
