some initial work on the .css done

--- a/responsive_web_design/project2/survey_form.html
+++ b/responsive_web_design/project2/survey_form.html
@@ -26,11 +26,11 @@ User Story #12: Inside the form element, I can select an option from a dropdown 
 
 User Story #13: Inside the form element, I can select a field from one or more groups of radio buttons. Each group should be grouped using the name attribute (Done)
 
-User Story #14: Inside the form element, I can select several fields from a series of checkboxes, each of which must have a value attribute.
+User Story #14: Inside the form element, I can select several fields from a series of checkboxes, each of which must have a value attribute. (Done)
 
-User Story #15: Inside the form element, I am presented with a textarea at the end for additional comments.
+User Story #15: Inside the form element, I am presented with a textarea at the end for additional comments. (Done)
 
-User Story #16: Inside the form element, I am presented with a button with id="submit" to submit all my inputs. -->
+User Story #16: Inside the form element, I am presented with a button with id="submit" to submit all my inputs. (Done) -->
 
 <html>
   <head>
@@ -43,7 +43,7 @@ User Story #16: Inside the form element, I am presented with a button with id="s
         Survey Form (Free Code Camp Project #2)
       </h1>
       <p id="description">
-        Survey about self tought programmers and their background in mathematics
+        Survey about self taught programmers and their background in mathematics
       </p>
     </main>
     <div>
@@ -215,6 +215,5 @@ User Story #16: Inside the form element, I am presented with a button with id="s
         Submit
       </button>
     </div>
-
   </body>
 </html>
