finished project completely, all 10 tests passed

--- a/responsive_web_design/project1/tribute_page.html
+++ b/responsive_web_design/project1/tribute_page.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <html>
-<head>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="tribute_page_stylesheet.css">
-  <title> Tribute Page </title>
+<head>
+  <title> CodePen - FCC: Tribute Page </title>
 </head>
   <body>
     <main id="main">
-      <h1 id="title">
+      <h1 id="title" class="title">
         Geo Milev
      </h1>
      <h3 id="subtitle" class="subtitle"> <p> His only crime was writting poetry</p> </h3>
     </main>
+
     <div id="img-div" class="portrait-image">
       <figure>
-        <figurecap>
+        <figcaption id="img-caption">
         <img id="image" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fb%2Fb4%2FGeo_Milev.jpg%2F220px-Geo_Milev.jpg&f=1&nofb=1"
           alt="Portrait picture of Geo Milev">
-        <figurecap id="portrait-image-figcap"> Geo Milev portrait picture </figurecap>
+        <figurecap id="portrait-image-figcap"> Geo Milev portrait picture </figcaption>
       </figure>
     </div>
-    <section>
+    <section id="tribute-info">
       <h3 id="headline"> Here's a short autobiography of Geo Milev </h3>
       <div id="autobiography">
         <p> Geo Milev (born Georgi Milev Kasabov; 15 January [O.S. 27 January]
@@ -73,6 +75,6 @@
 
       </div>
     </section>
-    <div> <a id="tribute-link" href="https://en.wikipedia.org/wiki/Geo_Milev"> Wikipedia entry </a> </div>
+    <div> <a id="tribute-link" href="https://en.wikipedia.org/wiki/Geo_Milev" target="_blank"> Wikipedia entry </a> </div>
   </body>
 </html>
